development/typemill/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typemill-app
  namespace: chia-manager-docs
  labels:
    app: typemill-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: typemill-app
  template:
    metadata:
      labels:
        app: typemill-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: app
        image: oled01/typemill:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 100M
            cpu: 500m
        ports:
        - containerPort: 80
        volumeMounts:
        - name: typemill-data
          mountPath: /var/www/html/settings
          subPath: settings
        - name: typemill-data
          mountPath: /var/www/html/content
          subPath: content
        - name: typemill-data
          mountPath: /var/www/html/media
          subPath: media
        - name: typemill-data
          mountPath: /var/www/html/cache
          subPath: cache
        - name: typemill-data
          mountPath: /var/www/html/plugins
          subPath: plugins
        - name: htaccess
          mountPath: /var/www/html/.htaccess
          subPath: .htaccess
      volumes:
      - name: typemill-data
        persistentVolumeClaim:
          claimName: typemill-app-pv
      - name: htaccess
        configMap:
          name: typemill-htaccess
