development/typemill/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typemill-app
  namespace: chia-manager-docs
  labels:
    app: typemill-app
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: typemill-app
