development/typemill/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typemill-ingress
  namespace: chia-manager-docs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - migrate.docs.chia-manager.com
    secretName: my-kube-tls
  rules:
  - host: migrate.docs.chia-manager.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: typemill-app
              port:
                number: 80
